crates/loxide_parser/snapshots/regression/snapshots-outputs/issue6.snap
---
source: crates/loxide_parser/tests/regression/issue6.rs
expression: result
input_file: crates/loxide_parser/snapshots/regression/snapshots-inputs/issue6.lox
---
(
    [
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    2.0,
                                ),
                            ),
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    1.0,
                                ),
                            ),
                        },
                        operator: GreaterEqual,
                    },
                ),
            },
        ),
        Expression(
            Expr {
                kind: Binary(
                    BinaryExpr {
                        lhs: Expr {
                            kind: Literal(
                                Number(
                                    2.0,
                                ),
                            ),
                        },
                        rhs: Expr {
                            kind: Literal(
                                Number(
                                    1.0,
                                ),
                            ),
                        },
                        operator: Greater,
                    },
                ),
            },
        ),
    ],
    [],
)
